# lessons1

./: CMakeLists.txt  Class.cpp  Class.h  HelloWorls.cpp  stringg.c
include/: functions.h
src/: Dynamische_Speicher.cpp  class.cpp  functions.cpp  main.cpp
test/: test_functions.cpp
